feat: 해당되는 점수 부여